fix: layout overflow

--- a/layout/BoxLayout/BoxLayout.module.scss
+++ b/layout/BoxLayout/BoxLayout.module.scss
@@ -36,7 +36,7 @@
 
     &Children {
       flex: 1;
-      // overflow: auto;
+      overflow: auto;
     }
   }
 
